Improve api usage documentation
